<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/bg_bottom_sheet_white"
	android:orientation="vertical"
	app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

	<Toolbar
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:clipChildren="false"
		android:clipToPadding="false"
		android:contentInsetEnd="@dimen/guidestyle_largest_spacing"
		android:contentInsetStart="@dimen/guidestyle_largest_spacing"
		android:elevation="5dp">

		<com.google.android.material.imageview.ShapeableImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/close_button"
			android:elevation="0dp"
			android:layout_gravity="end"
			android:src="@drawable/ic_close_button" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/guidestyle_ui_style_guide"
			android:textColor="@color/guidestyle_primary_200"
			android:textSize="24sp"
			android:textStyle="bold" />

	</Toolbar>

	<!--	Error report header-->
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/error_message"
		style="@style/GuideStyleHeader"
		android:background="@color/guidestyle_pink"
		android:layout_marginBottom="@dimen/guidestyle_largest_spacing"
		android:text="@string/guidestyle_failed_to_load_the_package"
		android:textColor="@color/guidestyle_black"
		android:visibility="gone" />

	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:id="@+id/nested_scroll_view"
		android:fillViewport="true"
		android:paddingBottom="@dimen/guidestyle_largest_spacing">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:id="@+id/guidestyle_container"
			android:orientation="vertical"
			tools:context=".StyleGuideFragment">
			<!--		Colors RecyclerView-->
			<com.cube.styleguide.views.ExpandableView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/color_container_view"
				android:orientation="vertical"
				android:visibility="gone"
				app:header="@string/guidestyle_colors"
				tools:visibility="visible">

				<androidx.recyclerview.widget.RecyclerView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/color_recycler_view"
					android:nestedScrollingEnabled="true"
					app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

				<androidx.recyclerview.widget.RecyclerView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/shadow_recycler_view"
					android:nestedScrollingEnabled="true"
					app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
			</com.cube.styleguide.views.ExpandableView>

			<!--		Text Styles RecyclerView-->
			<com.cube.styleguide.views.ExpandableView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/text_container_view"
				android:layout_marginTop="@dimen/guidestyle_largest_spacing"
				android:orientation="vertical"
				android:visibility="gone"
				app:header="@string/guidestyle_text_styles"
				tools:visibility="visible">

				<androidx.recyclerview.widget.RecyclerView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/text_recycler_view"
					android:layout_marginHorizontal="@dimen/guidestyle_xlarge_spacing"
					android:layout_marginVertical="@dimen/guidestyle_large_spacing"
					android:nestedScrollingEnabled="true"
					app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
			</com.cube.styleguide.views.ExpandableView>

			<!--		Layout (Spacings) RecyclerView-->
			<com.cube.styleguide.views.ExpandableView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/layout_container_view"
				android:layout_marginTop="@dimen/guidestyle_largest_spacing"
				android:orientation="vertical"
				android:visibility="gone"
				app:header="@string/guidestyle_layout"
				tools:visibility="visible">

				<androidx.recyclerview.widget.RecyclerView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/layout_recycler_view"
					android:layout_marginHorizontal="@dimen/guidestyle_large_spacing"
					android:layout_marginVertical="@dimen/guidestyle_xlarge_spacing"
					android:nestedScrollingEnabled="true"
					app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
					app:spanCount="4" />

				<androidx.recyclerview.widget.RecyclerView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/layout_recycler_view_horizontal_spacing"
					android:layout_marginVertical="@dimen/guidestyle_xlarge_spacing"
					android:nestedScrollingEnabled="true"
					app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
			</com.cube.styleguide.views.ExpandableView>

			<!--		Layout (Radius) RecyclerView-->
			<com.cube.styleguide.views.ExpandableView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/radius_container_view"
				android:layout_marginTop="@dimen/guidestyle_largest_spacing"
				android:orientation="vertical"
				android:visibility="gone"
				app:header="@string/guidestyle_radius"
				tools:visibility="visible">

				<androidx.recyclerview.widget.RecyclerView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/radius_recycler_view"
					android:layout_marginHorizontal="@dimen/guidestyle_large_spacing"
					android:layout_marginVertical="@dimen/guidestyle_xlarge_spacing"
					android:nestedScrollingEnabled="true"
					app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
					app:spanCount="4" />
			</com.cube.styleguide.views.ExpandableView>

			<!--		Buttons List-->
			<com.cube.styleguide.views.ExpandableView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/button_container_view"
				android:layout_marginTop="@dimen/guidestyle_largest_spacing"
				android:orientation="vertical"
				android:visibility="gone"
				app:header="@string/guidestyle_buttons"
				tools:visibility="visible">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/buttons_container"
					android:orientation="vertical">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						style="@style/GuideStyleCaption"
						android:background="@color/guidestyle_black"
						android:layout_gravity="start"
						android:layout_marginHorizontal="@dimen/guidestyle_large_spacing"
						android:layout_marginTop="@dimen/guidestyle_largest_spacing"
						android:text="@string/guidestyle_enabled" />

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:id="@+id/button_enabled_container_view"
						android:layout_marginVertical="@dimen/guidestyle_xlarge_spacing"
						android:orientation="vertical"
						android:paddingHorizontal="@dimen/guidestyle_large_spacing" />

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						style="@style/GuideStyleCaption"
						android:background="@color/guidestyle_black"
						android:layout_gravity="start"
						android:layout_marginHorizontal="@dimen/guidestyle_large_spacing"
						android:layout_marginTop="@dimen/guidestyle_largest_spacing"
						android:text="@string/guidestyle_disabled" />

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:id="@+id/button_disabled_container_view"
						android:layout_marginVertical="@dimen/guidestyle_xlarge_spacing"
						android:orientation="vertical"
						android:paddingHorizontal="@dimen/guidestyle_large_spacing" />
				</LinearLayout>
			</com.cube.styleguide.views.ExpandableView>

			<!--		RadioButtons list-->
			<com.cube.styleguide.views.ExpandableView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:id="@+id/radiobutton_container_view"
				android:layout_marginTop="@dimen/guidestyle_largest_spacing"
				android:orientation="vertical"
				android:visibility="gone"
				app:header="@string/guidestyle_radiobuttons"
				tools:visibility="visible">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/radiobutton_container"
					android:orientation="vertical"
					android:visibility="gone">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						style="@style/GuideStyleCaption"
						android:layout_gravity="start"
						android:layout_marginHorizontal="@dimen/guidestyle_large_spacing"
						android:layout_marginTop="@dimen/guidestyle_largest_spacing"
						android:text="@string/guidestyle_enabled" />

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:id="@+id/radiobutton_enabled_container_view"
						android:layout_marginVertical="@dimen/guidestyle_xlarge_spacing"
						android:orientation="vertical"
						android:paddingHorizontal="@dimen/guidestyle_large_spacing" />

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						style="@style/GuideStyleCaption"
						android:background="@color/guidestyle_black"
						android:layout_gravity="start"
						android:layout_marginHorizontal="@dimen/guidestyle_large_spacing"
						android:text="@string/guidestyle_disabled" />

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:id="@+id/radiobutton_disabled_container_view"
						android:layout_marginVertical="@dimen/guidestyle_xlarge_spacing"
						android:orientation="vertical"
						android:paddingHorizontal="@dimen/guidestyle_large_spacing" />
				</LinearLayout>
			</com.cube.styleguide.views.ExpandableView>

			<!--		CheckBox List-->
			<com.cube.styleguide.views.ExpandableView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/checkbox_container_view"
				android:layout_marginTop="@dimen/guidestyle_largest_spacing"
				android:orientation="vertical"
				android:visibility="gone"
				app:header="@string/guidestyle_checkbox"
				tools:visibility="visible">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/checkbox_container"
					android:orientation="vertical">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						style="@style/GuideStyleCaption"
						android:background="@color/guidestyle_black"
						android:layout_gravity="start"
						android:layout_marginHorizontal="@dimen/guidestyle_large_spacing"
						android:layout_marginTop="@dimen/guidestyle_largest_spacing"
						android:text="@string/guidestyle_enabled" />

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:id="@+id/checkbox_enabled_container_view"
						android:layout_marginVertical="@dimen/guidestyle_xlarge_spacing"
						android:orientation="vertical"
						android:paddingHorizontal="@dimen/guidestyle_large_spacing" />

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						style="@style/GuideStyleCaption"
						android:background="@color/guidestyle_black"
						android:layout_gravity="start"
						android:layout_marginHorizontal="@dimen/guidestyle_large_spacing"
						android:text="@string/guidestyle_disabled" />

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:id="@+id/checkbox_disabled_container_view"
						android:layout_marginVertical="@dimen/guidestyle_xlarge_spacing"
						android:orientation="vertical"
						android:paddingHorizontal="@dimen/guidestyle_large_spacing" />
				</LinearLayout>

			</com.cube.styleguide.views.ExpandableView>

			<!--		SwitchButtons list-->
			<com.cube.styleguide.views.ExpandableView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:id="@+id/switch_container_view"
				android:layout_marginTop="@dimen/guidestyle_largest_spacing"
				android:orientation="vertical"
				android:visibility="gone"
				app:header="@string/guidestyle_switch"
				tools:visibility="visible">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/switch_container"
					android:orientation="vertical"
					android:visibility="gone">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						style="@style/GuideStyleCaption"
						android:layout_gravity="start"
						android:layout_marginHorizontal="@dimen/guidestyle_large_spacing"
						android:layout_marginTop="@dimen/guidestyle_largest_spacing"
						android:text="@string/guidestyle_enabled" />

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:id="@+id/switch_enabled_container_view"
						android:layout_marginVertical="@dimen/guidestyle_xlarge_spacing"
						android:orientation="vertical"
						android:paddingHorizontal="@dimen/guidestyle_large_spacing" />

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						style="@style/GuideStyleCaption"
						android:background="@color/guidestyle_black"
						android:layout_gravity="start"
						android:layout_marginHorizontal="@dimen/guidestyle_large_spacing"
						android:text="@string/guidestyle_disabled" />

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:id="@+id/switch_disabled_container_view"
						android:layout_marginVertical="@dimen/guidestyle_xlarge_spacing"
						android:orientation="vertical"
						android:paddingHorizontal="@dimen/guidestyle_large_spacing" />
				</LinearLayout>
			</com.cube.styleguide.views.ExpandableView>

			<!--		Custom View List-->
			<com.cube.styleguide.views.ExpandableView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/custom_view_container"
				android:layout_marginTop="@dimen/guidestyle_largest_spacing"
				android:orientation="vertical"
				android:visibility="gone"
				app:header="@string/guidestyle_custom_views"
				tools:visibility="visible">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/custom_views"
					android:layout_marginHorizontal="@dimen/guidestyle_xlarge_spacing"
					android:orientation="vertical">
				</LinearLayout>
			</com.cube.styleguide.views.ExpandableView>
		</LinearLayout>
	</androidx.core.widget.NestedScrollView>
</LinearLayout>